--- a/OneDrive/Desktop/Password Generator React/passwordgenerator/.gitignore
+++ b/OneDrive/Desktop/Password Generator React/passwordgenerator/.gitignore
@@ -1,3 +1,28 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 # Ignore Visual Studio Code settings
 .vscode/
 
@@ -40,3 +65,4 @@ Thumbs.db
 /eclipse-workspace/
 /eclipse/
 /source/
+
